--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   profiles:
     active: dev
+  main:
+    allow-bean-definition-overriding: true
 
 server:
   servlet:
@@ -10,3 +12,11 @@ mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
   type-aliases-package: com.hacker.entity
 
+# 逻辑删除（软删除）
+mybatis-plus:
+  global-config:
+    db-config:
+      # 逻辑已删除值
+      logic-delete-value: 1
+      # 逻辑未删除值(默认为 0)
+      logic-not-delete-value: 0
