--- a/src/main/resources/config/exception-code.properties
+++ b/src/main/resources/config/exception-code.properties
@@ -1,176 +1,193 @@
-# 消息码配置文件
-# 格式：消息码 -> 消息
-duo.codes[9999]=服务器未知异常O(∩_∩)O哈哈~
-duo.codes[10000]=通用异常
-duo.codes[10001]=参数不合法
+# \u6D88\u606F\u7801\u914D\u7F6E\u6587\u4EF6
+# \u683C\u5F0F\uFF1A\u6D88\u606F\u7801 -> \u6D88\u606F
+duo.codes[9999]=\u670D\u52A1\u5668\u672A\u77E5\u5F02\u5E38O(\u2229_\u2229)O\u54C8\u54C8~
+duo.codes[10000]=\u901A\u7528\u5F02\u5E38
+duo.codes[10001]=\u53C2\u6570\u4E0D\u5408\u6CD5
 duo.codes[0]=ok
-duo.codes[10002]=资源未找到
-duo.codes[10003]=没有找到合适的登陆处理方法
-duo.codes[10004]=令牌不合法或已过期
-duo.codes[10005]=用户未被授权
-duo.codes[10006]=登陆失败
-duo.codes[10007]=微信统一下单失败
-duo.codes[10008]=微信登录失败
-duo.codes[10009]=Json数据有误
-duo.codes[10010]=请先添加微信授权
-duo.codes[10011]=该手机号已绑定其他微信号
-duo.codes[10012]=非法操作
-duo.codes[10013]=请先添加苹果授权
-duo.codes[10014]=Apple登录失败
-duo.codes[10015]=密码不正确
-duo.codes[10016]=更新密码失败
-duo.codes[10017]=请输入点什么吧
-duo.codes[10018]=获取定位失败
-duo.codes[10019]=系统繁忙，请稍后再试
-#短信验证码发送
-duo.codes[10020]=已超出当日发送限额
-duo.codes[10021]=业务限流
-duo.codes[10022]=手机号非法
-duo.codes[20000]=用户类通用错误
-duo.codes[20001]=用户已存在
-duo.codes[20002]=用户不存在或密码错误
-duo.codes[20003]=用户不存在
-duo.codes[20004]=获取用户wx openid失败
-duo.codes[20005]=手机号已注册
-duo.codes[20006]=手机号或密码错误
-duo.codes[20007]=验证码错误
-duo.codes[20008]=该手机号已被绑定
-duo.codes[20009]=获取验证码过于频繁
-duo.codes[20010]=验证码类型错误
-duo.codes[20011]=该账号已实名认证
-duo.codes[20012]=该身份证号已被实名认证
-duo.codes[20013]=两次输入密码不一致
-duo.codes[20014]=实名认证未通过
-duo.codes[20015]=该账户已注销
-# 绑定手机号与原手机号不一致
-duo.codes[20016]=手机号错误
-duo.codes[20017]=账户余额不足
-duo.codes[20018]=已超出单次可提现最大额度
-duo.codes[20019]=已超出单日可提现最大额度
-duo.codes[20020]=不能关注自己
-duo.codes[20021]=输入手机号与绑定手机号不一致
-duo.codes[20022]=已添加过银行卡
-duo.codes[20023]=只能添加一张银行卡
-duo.codes[20024]=还未绑定银行卡
-duo.codes[30000]=已添加过该学员
-duo.codes[30001]=学员不存在
-duo.codes[30002]=您最多能添加三名学员
-duo.codes[30003]=该学员存在未上完的课程,暂不能删除
-duo.codes[30004]=学员考评信息不能为空
-duo.codes[30005]=学员参数有误,检查学员信息
-duo.codes[30006]=学员ID不能为空
-duo.codes[30007]=该课程尚未开始,还不能打考勤哦
-duo.codes[30008]=该课程尚未开始,还不能对学员进行评价哦
-duo.codes[40000]=您有尚未审核的科目认证，暂不能认证新的科目
-duo.codes[40001]=您已认证过该科目
-duo.codes[40002]=您已提交过申请，请勿重复提交
-duo.codes[40003]=该老师尚未认证该课或者该教师不存在
-duo.codes[40004]=你尚未认证该科目
-duo.codes[40005]=你尚未认证该科目,暂无该操作权限
-duo.codes[40006]=认证科目有误,请检查认证科目
-duo.codes[40007]=您有尚未审核的提现记录，暂不能提现
-duo.codes[40008]=您尚未通过教师认证,暂无该操作权限
-duo.codes[40009]=该教师已签约
-duo.codes[40010]=未找到该签约教师
-duo.codes[40011]=未找到该签约教师所在校区
-duo.codes[40012]=需要是1v1任课教师才能选择校区
-duo.codes[40013]=该教师尚有未完成的订单
-duo.codes[40014]=该科目不存在该等级
-duo.codes[50000]=资源未发现,请检查查询参数
-duo.codes[50001]=参数有误
-duo.codes[50002]=请检查预约信息
-duo.codes[50003]=人数已满
-duo.codes[50004]=老师当前时间段没课,你再看看
-duo.codes[50005]=该课程已被预约了
-duo.codes[50006]=未找到相关教师
-duo.codes[50007]=课时不够,请续课时
-duo.codes[50008]=课程预约时间参数有误
-duo.codes[50009]=该课程不存在或者已下架
-duo.codes[50010]=时间参数不合法,时间格式为:yyyy-MM-dd HH:mm
-duo.codes[50011]=解析时间有误
-duo.codes[50012]=该时段老师没课或者该时段已被人预约了
-duo.codes[50013]=该时段老师休息,请在看看
-duo.codes[50014]=该时段与已上传时段冲突
-duo.codes[50015]=群课场次必填
-duo.codes[50016]=你当前预约的课程已经超过会员有效期
-duo.codes[50017]=暂无该群课场次
-duo.codes[50018]=课程类型错误,请检查查询参数
-duo.codes[50019]=尚未查询到与bookTimeID有关的时间段
-duo.codes[50020]=该时段已被预约,请在看看
-duo.codes[50021]=上传时段冲突,请检查上传时间段
-duo.codes[50022]=该课程不存在
-duo.codes[50023]=请选择上课对应的校区地址
-duo.codes[50024]=该场次未查到该学员
-duo.codes[50025]=排课时间必须大于当前时间
-duo.codes[50026]=该时段暂无可用教室
-duo.codes[50027]=该时段老师已排课
-duo.codes[50100]=你暂无该操作权限
-duo.codes[50101]=你尚没该学员的访问权限
-duo.codes[50102]=自己不能预约自己的课程哦
-duo.codes[50103]=预约时间要大于当前时间哦
-duo.codes[50104]=book_time字段必传哦
-duo.codes[50105]=课程类型课程,请检查课程类型
-duo.codes[50106]=该时段暂无教室,请看看其他时段
-duo.codes[50107]=该课程已下架
-duo.codes[50108]=该时间段你已经有预约其他课程了
-duo.codes[50109]=你暂时不能报该等级的课程哦
-duo.codes[50501]=已添加过该课程了
-duo.codes[50502]=还未添加该课程
-duo.codes[50503]=群课课程类型错误
-duo.codes[50801]=已发布过该课程了
-duo.codes[50802]=还未绑定校区地址
-duo.codes[50803]=课程不存在
-duo.codes[50804]=教程不存在
-duo.codes[60000]=你尚未购买群课优惠券
-duo.codes[60001]=群课优惠券数量不够
-duo.codes[60002]=你需要进行现金支付哦
-duo.codes[60100]=预约失败,暂无空闲教室
-duo.codes[60101]=未找到相关教室
-duo.codes[60300]=该校区不存在
-duo.codes[60301]=还未绑定负责人
-duo.codes[60302]=未找到相关负责人对应的校区
-duo.codes[60303]=该记录已结算
-duo.codes[60304]=未找到结算记录
-duo.codes[60305]=校区负责人不支持认证教师
-duo.codes[70000]=刷新令牌不合法或已过期
-duo.codes[70001]=令牌已过期
-duo.codes[70002]=令牌无效
-duo.codes[70100]=订单不存在,请检查查询参数
-duo.codes[70101]=订单已过期
-duo.codes[70102]=下单失败
-duo.codes[70103]=操作失败,必须提前24小时
-duo.codes[70104]=取消预约失败,你目前尚未预约公开课
-duo.codes[70105]=取消失败,取消次数已用完
-duo.codes[70106]=数据不完整,请认证看文档
-duo.codes[70107]=该订单尚未完结,暂不能评论
-duo.codes[70108]=订单创建失败
-duo.codes[70109]=更新订单失败
-duo.codes[70110]=订单金额与实际金额不匹配,可能某些商品价格有浮动
-duo.codes[70111]=你暂无权限访问该订单
-duo.codes[70112]=退款异常,请稍后再试
-duo.codes[70113]=支付宝系统异常,请稍后再试
-duo.codes[70114]=退款金额与订单金额不一致 wxOrder
-duo.codes[70115]=wxOrder为null,调用微信失败 wxOrder
-duo.codes[70116]=订单取消失败,该课程没有场次ID
-duo.codes[70117]=该订单尚未支付/取消/退款,暂时不能续课时哦
-duo.codes[70118]=该商品不支持退款
-duo.codes[70119]=退款金额有变,请重新刷新数据
-duo.codes[70120]=该订单已取消已完结或已退款,无法更改时间
-duo.codes[70121]=该订单尚不能退款哦
-duo.codes[70122]=该订单扣券失败
-duo.codes[70123]=操作失败,更改上课次数已达上限
-duo.codes[80000]=注册IM失败
-duo.codes[80001]=连接IM失败
-duo.codes[80002]=删除IM用户失败
-duo.codes[80003]=消息发送失败
-duo.codes[80004]=获取黑名单失败
-duo.codes[90000]=定时任务启动失败
-duo.codes[90001]=未找到该定时任务
-duo.codes[90101]=版本信息未找到
-duo.codes[90201]=未找到该条艺术圈
-duo.codes[90202]=请确定是否点赞
-duo.codes[90203]=评论类型错误
-duo.codes[90204]=未找到相关评论
-duo.codes[90205]=不可以屏蔽自己哦
-duo.codes[90206]=好歹说点什么吧~~~~(>_<)~~~~
-duo.codes[90207]=动态不存在或已被删除
+duo.codes[10002]=\u8D44\u6E90\u672A\u627E\u5230
+duo.codes[10003]=\u6CA1\u6709\u627E\u5230\u5408\u9002\u7684\u767B\u9646\u5904\u7406\u65B9\u6CD5
+duo.codes[10004]=\u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u5DF2\u8FC7\u671F
+duo.codes[10005]=\u7528\u6237\u672A\u88AB\u6388\u6743
+duo.codes[10006]=\u767B\u9646\u5931\u8D25
+duo.codes[10007]=\u5FAE\u4FE1\u7EDF\u4E00\u4E0B\u5355\u5931\u8D25
+duo.codes[10008]=\u5FAE\u4FE1\u767B\u5F55\u5931\u8D25
+duo.codes[10009]=Json\u6570\u636E\u6709\u8BEF,\u8BF7\u8BA4\u8BC1\u770B\u6587\u6863
+duo.codes[10010]=\u8BF7\u5148\u6DFB\u52A0\u5FAE\u4FE1\u6388\u6743
+duo.codes[10011]=\u8BE5\u624B\u673A\u53F7\u5DF2\u7ED1\u5B9A\u5176\u4ED6\u5FAE\u4FE1\u53F7
+duo.codes[10012]=\u975E\u6CD5\u64CD\u4F5C
+duo.codes[10013]=\u8BF7\u5148\u6DFB\u52A0\u82F9\u679C\u6388\u6743
+duo.codes[10014]=Apple\u767B\u5F55\u5931\u8D25
+duo.codes[10015]=\u5BC6\u7801\u4E0D\u6B63\u786E
+duo.codes[10016]=\u66F4\u65B0\u5BC6\u7801\u5931\u8D25
+duo.codes[10017]=\u8BF7\u8F93\u5165\u70B9\u4EC0\u4E48\u5427
+duo.codes[10018]=\u83B7\u53D6\u5B9A\u4F4D\u5931\u8D25
+duo.codes[10019]=\u7CFB\u7EDF\u7E41\u5FD9\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5
+#\u77ED\u4FE1\u9A8C\u8BC1\u7801\u53D1\u9001
+duo.codes[10020]=\u5DF2\u8D85\u51FA\u5F53\u65E5\u53D1\u9001\u9650\u989D
+duo.codes[10021]=\u4E1A\u52A1\u9650\u6D41
+duo.codes[10022]=\u624B\u673A\u53F7\u975E\u6CD5
+
+duo.codes[20000]=\u7528\u6237\u7C7B\u901A\u7528\u9519\u8BEF
+duo.codes[20001]=\u7528\u6237\u5DF2\u5B58\u5728
+duo.codes[20002]=\u7528\u6237\u4E0D\u5B58\u5728\u6216\u5BC6\u7801\u9519\u8BEF
+duo.codes[20003]=\u7528\u6237\u4E0D\u5B58\u5728
+duo.codes[20004]=\u83B7\u53D6\u7528\u6237wx openid\u5931\u8D25
+duo.codes[20005]=\u624B\u673A\u53F7\u5DF2\u6CE8\u518C
+duo.codes[20006]=\u624B\u673A\u53F7\u6216\u5BC6\u7801\u9519\u8BEF
+duo.codes[20007]=\u9A8C\u8BC1\u7801\u9519\u8BEF
+duo.codes[20008]=\u8BE5\u624B\u673A\u53F7\u5DF2\u88AB\u7ED1\u5B9A
+duo.codes[20009]=\u83B7\u53D6\u9A8C\u8BC1\u7801\u8FC7\u4E8E\u9891\u7E41
+duo.codes[20010]=\u9A8C\u8BC1\u7801\u7C7B\u578B\u9519\u8BEF
+duo.codes[20011]=\u8BE5\u8D26\u53F7\u5DF2\u5B9E\u540D\u8BA4\u8BC1
+duo.codes[20012]=\u8BE5\u8EAB\u4EFD\u8BC1\u53F7\u5DF2\u88AB\u5B9E\u540D\u8BA4\u8BC1
+duo.codes[20013]=\u4E24\u6B21\u8F93\u5165\u5BC6\u7801\u4E0D\u4E00\u81F4
+duo.codes[20014]=\u5B9E\u540D\u8BA4\u8BC1\u672A\u901A\u8FC7
+duo.codes[20015]=\u8BE5\u8D26\u6237\u5DF2\u6CE8\u9500
+# \u7ED1\u5B9A\u624B\u673A\u53F7\u4E0E\u539F\u624B\u673A\u53F7\u4E0D\u4E00\u81F4
+duo.codes[20016]=\u624B\u673A\u53F7\u9519\u8BEF
+duo.codes[20017]=\u8D26\u6237\u4F59\u989D\u4E0D\u8DB3
+duo.codes[20018]=\u5DF2\u8D85\u51FA\u5355\u6B21\u53EF\u63D0\u73B0\u6700\u5927\u989D\u5EA6
+duo.codes[20019]=\u5DF2\u8D85\u51FA\u5355\u65E5\u53EF\u63D0\u73B0\u6700\u5927\u989D\u5EA6
+duo.codes[20020]=\u4E0D\u80FD\u5173\u6CE8\u81EA\u5DF1
+duo.codes[20021]=\u8F93\u5165\u624B\u673A\u53F7\u4E0E\u7ED1\u5B9A\u624B\u673A\u53F7\u4E0D\u4E00\u81F4
+duo.codes[20022]=\u5DF2\u6DFB\u52A0\u8FC7\u94F6\u884C\u5361
+duo.codes[20023]=\u53EA\u80FD\u6DFB\u52A0\u4E00\u5F20\u94F6\u884C\u5361
+duo.codes[20024]=\u8FD8\u672A\u7ED1\u5B9A\u94F6\u884C\u5361
+
+duo.codes[30000]=\u5DF2\u6DFB\u52A0\u8FC7\u8BE5\u5B66\u5458
+duo.codes[30001]=\u5B66\u5458\u4E0D\u5B58\u5728
+duo.codes[30002]=\u60A8\u6700\u591A\u80FD\u6DFB\u52A0\u4E09\u540D\u5B66\u5458
+duo.codes[30003]=\u8BE5\u5B66\u5458\u5B58\u5728\u672A\u4E0A\u5B8C\u7684\u8BFE\u7A0B,\u6682\u4E0D\u80FD\u5220\u9664
+duo.codes[30004]=\u5B66\u5458\u8003\u8BC4\u4FE1\u606F\u4E0D\u80FD\u4E3A\u7A7A
+duo.codes[30005]=\u5B66\u5458\u53C2\u6570\u6709\u8BEF,\u68C0\u67E5\u5B66\u5458\u4FE1\u606F
+duo.codes[30006]=\u5B66\u5458ID\u4E0D\u80FD\u4E3A\u7A7A
+duo.codes[30007]=\u8BE5\u8BFE\u7A0B\u5C1A\u672A\u5F00\u59CB,\u8FD8\u4E0D\u80FD\u6253\u8003\u52E4\u54E6
+duo.codes[30008]=\u8BE5\u8BFE\u7A0B\u5C1A\u672A\u5F00\u59CB,\u8FD8\u4E0D\u80FD\u5BF9\u5B66\u5458\u8FDB\u884C\u8BC4\u4EF7\u54E6
+
+duo.codes[40000]=\u60A8\u6709\u5C1A\u672A\u5BA1\u6838\u7684\u79D1\u76EE\u8BA4\u8BC1\uFF0C\u6682\u4E0D\u80FD\u8BA4\u8BC1\u65B0\u7684\u79D1\u76EE
+duo.codes[40001]=\u60A8\u5DF2\u8BA4\u8BC1\u8FC7\u8BE5\u79D1\u76EE
+duo.codes[40002]=\u60A8\u5DF2\u63D0\u4EA4\u8FC7\u7533\u8BF7\uFF0C\u8BF7\u52FF\u91CD\u590D\u63D0\u4EA4
+duo.codes[40003]=\u8BE5\u8001\u5E08\u5C1A\u672A\u8BA4\u8BC1\u8BE5\u8BFE\u6216\u8005\u8BE5\u6559\u5E08\u4E0D\u5B58\u5728
+duo.codes[40004]=\u4F60\u5C1A\u672A\u8BA4\u8BC1\u8BE5\u79D1\u76EE
+duo.codes[40005]=\u4F60\u5C1A\u672A\u8BA4\u8BC1\u8BE5\u79D1\u76EE,\u6682\u65E0\u8BE5\u64CD\u4F5C\u6743\u9650
+duo.codes[40006]=\u8BA4\u8BC1\u79D1\u76EE\u6709\u8BEF,\u8BF7\u68C0\u67E5\u8BA4\u8BC1\u79D1\u76EE
+duo.codes[40007]=\u60A8\u6709\u5C1A\u672A\u5BA1\u6838\u7684\u63D0\u73B0\u8BB0\u5F55\uFF0C\u6682\u4E0D\u80FD\u63D0\u73B0
+duo.codes[40008]=\u60A8\u5C1A\u672A\u901A\u8FC7\u6559\u5E08\u8BA4\u8BC1,\u6682\u65E0\u8BE5\u64CD\u4F5C\u6743\u9650
+duo.codes[40009]=\u8BE5\u6559\u5E08\u5DF2\u7B7E\u7EA6
+duo.codes[40010]=\u672A\u627E\u5230\u8BE5\u7B7E\u7EA6\u6559\u5E08
+duo.codes[40011]=\u672A\u627E\u5230\u8BE5\u7B7E\u7EA6\u6559\u5E08\u6240\u5728\u6821\u533A
+duo.codes[40012]=\u9700\u8981\u662F1v1\u4EFB\u8BFE\u6559\u5E08\u624D\u80FD\u9009\u62E9\u6821\u533A
+duo.codes[40013]=\u8BE5\u6559\u5E08\u5C1A\u6709\u672A\u5B8C\u6210\u7684\u8BA2\u5355
+duo.codes[40014]=\u8BE5\u79D1\u76EE\u4E0D\u5B58\u5728\u8BE5\u7B49\u7EA7
+
+duo.codes[50000]=\u8D44\u6E90\u672A\u53D1\u73B0,\u8BF7\u68C0\u67E5\u67E5\u8BE2\u53C2\u6570
+duo.codes[50001]=\u53C2\u6570\u6709\u8BEF
+duo.codes[50002]=\u8BF7\u68C0\u67E5\u9884\u7EA6\u4FE1\u606F
+duo.codes[50003]=\u4EBA\u6570\u5DF2\u6EE1
+duo.codes[50004]=\u8001\u5E08\u5F53\u524D\u65F6\u95F4\u6BB5\u6CA1\u8BFE,\u4F60\u518D\u770B\u770B
+duo.codes[50005]=\u8BE5\u8BFE\u7A0B\u5DF2\u88AB\u9884\u7EA6\u4E86
+duo.codes[50006]=\u672A\u627E\u5230\u76F8\u5173\u6559\u5E08
+duo.codes[50007]=\u8BFE\u65F6\u4E0D\u591F,\u8BF7\u7EED\u8BFE\u65F6
+duo.codes[50008]=\u8BFE\u7A0B\u9884\u7EA6\u65F6\u95F4\u53C2\u6570\u6709\u8BEF
+duo.codes[50009]=\u8BE5\u8BFE\u7A0B\u4E0D\u5B58\u5728\u6216\u8005\u5DF2\u4E0B\u67B6
+duo.codes[50010]=\u65F6\u95F4\u53C2\u6570\u4E0D\u5408\u6CD5,\u65F6\u95F4\u683C\u5F0F\u4E3A:yyyy-MM-dd HH:mm
+duo.codes[50011]=\u89E3\u6790\u65F6\u95F4\u6709\u8BEF
+duo.codes[50012]=\u8BE5\u65F6\u6BB5\u8001\u5E08\u6CA1\u8BFE\u6216\u8005\u8BE5\u65F6\u6BB5\u5DF2\u88AB\u4EBA\u9884\u7EA6\u4E86
+duo.codes[50013]=\u8BE5\u65F6\u6BB5\u8001\u5E08\u4F11\u606F,\u8BF7\u5728\u770B\u770B
+duo.codes[50014]=\u8BE5\u65F6\u6BB5\u4E0E\u5DF2\u4E0A\u4F20\u65F6\u6BB5\u51B2\u7A81
+duo.codes[50015]=\u7FA4\u8BFE\u573A\u6B21\u5FC5\u586B
+duo.codes[50016]=\u4F60\u5F53\u524D\u9884\u7EA6\u7684\u8BFE\u7A0B\u5DF2\u7ECF\u8D85\u8FC7\u4F1A\u5458\u6709\u6548\u671F
+duo.codes[50017]=\u6682\u65E0\u8BE5\u7FA4\u8BFE\u573A\u6B21
+duo.codes[50018]=\u8BFE\u7A0B\u7C7B\u578B\u9519\u8BEF,\u8BF7\u68C0\u67E5\u67E5\u8BE2\u53C2\u6570
+duo.codes[50019]=\u5C1A\u672A\u67E5\u8BE2\u5230\u4E0EbookTimeID\u6709\u5173\u7684\u65F6\u95F4\u6BB5
+duo.codes[50020]=\u8BE5\u65F6\u6BB5\u5DF2\u88AB\u9884\u7EA6,\u8BF7\u5728\u770B\u770B
+duo.codes[50021]=\u4E0A\u4F20\u65F6\u6BB5\u51B2\u7A81,\u8BF7\u68C0\u67E5\u4E0A\u4F20\u65F6\u95F4\u6BB5
+duo.codes[50022]=\u8BE5\u8BFE\u7A0B\u4E0D\u5B58\u5728
+duo.codes[50023]=\u8BF7\u9009\u62E9\u4E0A\u8BFE\u5BF9\u5E94\u7684\u6821\u533A\u5730\u5740
+duo.codes[50024]=\u8BE5\u573A\u6B21\u672A\u67E5\u5230\u8BE5\u5B66\u5458
+duo.codes[50025]=\u6392\u8BFE\u65F6\u95F4\u5FC5\u987B\u5927\u4E8E\u5F53\u524D\u65F6\u95F4
+duo.codes[50026]=\u8BE5\u65F6\u6BB5\u6682\u65E0\u53EF\u7528\u6559\u5BA4
+duo.codes[50027]=\u8BE5\u65F6\u6BB5\u8001\u5E08\u5DF2\u6392\u8BFE
+
+duo.codes[50100]=\u4F60\u6682\u65E0\u8BE5\u64CD\u4F5C\u6743\u9650
+duo.codes[50101]=\u4F60\u5C1A\u6CA1\u8BE5\u5B66\u5458\u7684\u8BBF\u95EE\u6743\u9650
+duo.codes[50102]=\u81EA\u5DF1\u4E0D\u80FD\u9884\u7EA6\u81EA\u5DF1\u7684\u8BFE\u7A0B\u54E6
+duo.codes[50103]=\u9884\u7EA6\u65F6\u95F4\u8981\u5927\u4E8E\u5F53\u524D\u65F6\u95F4\u54E6
+duo.codes[50104]=book_time\u5B57\u6BB5\u5FC5\u4F20\u54E6
+duo.codes[50105]=\u8BFE\u7A0B\u7C7B\u578B\u8BFE\u7A0B,\u8BF7\u68C0\u67E5\u8BFE\u7A0B\u7C7B\u578B
+duo.codes[50106]=\u8BE5\u65F6\u6BB5\u6682\u65E0\u6559\u5BA4,\u8BF7\u770B\u770B\u5176\u4ED6\u65F6\u6BB5
+duo.codes[50107]=\u8BE5\u8BFE\u7A0B\u5DF2\u4E0B\u67B6
+duo.codes[50108]=\u8BE5\u65F6\u95F4\u6BB5\u4F60\u5DF2\u7ECF\u6709\u9884\u7EA6\u5176\u4ED6\u8BFE\u7A0B\u4E86
+duo.codes[50109]=\u4F60\u6682\u65F6\u4E0D\u80FD\u62A5\u8BE5\u7B49\u7EA7\u7684\u8BFE\u7A0B\u54E6
+duo.codes[50110]=\u4F60\u5F53\u524D\u65F6\u95F4\u6BB5\u6709\u5B66\u751F\u62A5\u8BFE\u4E86
+
+duo.codes[50501]=\u5DF2\u6DFB\u52A0\u8FC7\u8BE5\u8BFE\u7A0B\u4E86
+duo.codes[50502]=\u8FD8\u672A\u6DFB\u52A0\u8BE5\u8BFE\u7A0B
+duo.codes[50503]=\u7FA4\u8BFE\u8BFE\u7A0B\u7C7B\u578B\u9519\u8BEF
+
+duo.codes[50801] = \u5DF2\u53D1\u5E03\u8FC7\u8BE5\u8BFE\u7A0B\u4E86
+duo.codes[50802] = \u8FD8\u672A\u7ED1\u5B9A\u6821\u533A\u5730\u5740
+duo.codes[50803] = \u8BFE\u7A0B\u4E0D\u5B58\u5728
+duo.codes[50804] = \u6559\u7A0B\u4E0D\u5B58\u5728
+
+duo.codes[60000]=\u4F60\u5C1A\u672A\u8D2D\u4E70\u7FA4\u8BFE\u4F18\u60E0\u5238
+duo.codes[60001]=\u7FA4\u8BFE\u4F18\u60E0\u5238\u6570\u91CF\u4E0D\u591F
+duo.codes[60002]=\u4F60\u9700\u8981\u8FDB\u884C\u73B0\u91D1\u652F\u4ED8\u54E6
+
+duo.codes[60100]=\u9884\u7EA6\u5931\u8D25,\u6682\u65E0\u7A7A\u95F2\u6559\u5BA4
+duo.codes[60101]=\u672A\u627E\u5230\u76F8\u5173\u6559\u5BA4
+
+duo.codes[60300]=\u8BE5\u6821\u533A\u4E0D\u5B58\u5728
+duo.codes[60301]=\u8FD8\u672A\u7ED1\u5B9A\u8D1F\u8D23\u4EBA
+duo.codes[60302]=\u672A\u627E\u5230\u76F8\u5173\u8D1F\u8D23\u4EBA\u5BF9\u5E94\u7684\u6821\u533A
+duo.codes[60303]=\u8BE5\u8BB0\u5F55\u5DF2\u7ED3\u7B97
+duo.codes[60304]=\u672A\u627E\u5230\u7ED3\u7B97\u8BB0\u5F55
+duo.codes[60305]=\u6821\u533A\u8D1F\u8D23\u4EBA\u4E0D\u652F\u6301\u8BA4\u8BC1\u6559\u5E08
+
+duo.codes[70000]=\u5237\u65B0\u4EE4\u724C\u4E0D\u5408\u6CD5\u6216\u5DF2\u8FC7\u671F
+duo.codes[70001]=\u4EE4\u724C\u5DF2\u8FC7\u671F
+duo.codes[70002]=\u4EE4\u724C\u65E0\u6548
+
+duo.codes[70100]=\u8BA2\u5355\u4E0D\u5B58\u5728,\u8BF7\u68C0\u67E5\u67E5\u8BE2\u53C2\u6570
+duo.codes[70101]=\u8BA2\u5355\u5DF2\u8FC7\u671F
+duo.codes[70102]=\u4E0B\u5355\u5931\u8D25
+duo.codes[70103]=\u64CD\u4F5C\u5931\u8D25,\u5FC5\u987B\u63D0\u524D24\u5C0F\u65F6
+duo.codes[70104]=\u53D6\u6D88\u9884\u7EA6\u5931\u8D25,\u4F60\u76EE\u524D\u5C1A\u672A\u9884\u7EA6\u516C\u5F00\u8BFE
+duo.codes[70105]=\u53D6\u6D88\u5931\u8D25,\u53D6\u6D88\u6B21\u6570\u5DF2\u7528\u5B8C
+duo.codes[70106]=\u6570\u636E\u4E0D\u5B8C\u6574,\u8BF7\u8BA4\u8BC1\u770B\u6587\u6863
+duo.codes[70107]=\u8BE5\u8BA2\u5355\u5C1A\u672A\u5B8C\u7ED3,\u6682\u4E0D\u80FD\u8BC4\u8BBA
+duo.codes[70108]=\u8BA2\u5355\u521B\u5EFA\u5931\u8D25
+duo.codes[70109]=\u66F4\u65B0\u8BA2\u5355\u5931\u8D25
+duo.codes[70110]=\u8BA2\u5355\u91D1\u989D\u4E0E\u5B9E\u9645\u91D1\u989D\u4E0D\u5339\u914D,\u53EF\u80FD\u67D0\u4E9B\u5546\u54C1\u4EF7\u683C\u6709\u6D6E\u52A8
+duo.codes[70111]=\u4F60\u6682\u65E0\u6743\u9650\u8BBF\u95EE\u8BE5\u8BA2\u5355
+duo.codes[70112]=\u9000\u6B3E\u5F02\u5E38,\u8BF7\u7A0D\u540E\u518D\u8BD5
+duo.codes[70113]=\u652F\u4ED8\u5B9D\u7CFB\u7EDF\u5F02\u5E38,\u8BF7\u7A0D\u540E\u518D\u8BD5
+duo.codes[70114]=\u9000\u6B3E\u91D1\u989D\u4E0E\u8BA2\u5355\u91D1\u989D\u4E0D\u4E00\u81F4 wxOrder
+duo.codes[70115]=wxOrder\u4E3Anull,\u8C03\u7528\u5FAE\u4FE1\u5931\u8D25 wxOrder
+duo.codes[70116]=\u8BA2\u5355\u53D6\u6D88\u5931\u8D25,\u8BE5\u8BFE\u7A0B\u6CA1\u6709\u573A\u6B21ID
+duo.codes[70117]=\u8BE5\u8BA2\u5355\u5C1A\u672A\u652F\u4ED8/\u53D6\u6D88/\u9000\u6B3E,\u6682\u65F6\u4E0D\u80FD\u7EED\u8BFE\u65F6\u54E6
+duo.codes[70118]=\u8BE5\u5546\u54C1\u4E0D\u652F\u6301\u9000\u6B3E
+duo.codes[70119]=\u9000\u6B3E\u91D1\u989D\u6709\u53D8,\u8BF7\u91CD\u65B0\u5237\u65B0\u6570\u636E
+duo.codes[70120]=\u8BE5\u8BA2\u5355\u5DF2\u53D6\u6D88\u5DF2\u5B8C\u7ED3\u6216\u5DF2\u9000\u6B3E,\u65E0\u6CD5\u66F4\u6539\u65F6\u95F4
+duo.codes[70121]=\u8BE5\u8BA2\u5355\u5C1A\u4E0D\u80FD\u9000\u6B3E\u54E6
+duo.codes[70122]=\u8BE5\u8BA2\u5355\u6263\u5238\u5931\u8D25
+duo.codes[70123]=\u64CD\u4F5C\u5931\u8D25,\u66F4\u6539\u4E0A\u8BFE\u6B21\u6570\u5DF2\u8FBE\u4E0A\u9650
+
+duo.codes[80000]=\u6CE8\u518CIM\u5931\u8D25
+duo.codes[80001]=\u8FDE\u63A5IM\u5931\u8D25
+duo.codes[80002]=\u5220\u9664IM\u7528\u6237\u5931\u8D25
+duo.codes[80003]=\u6D88\u606F\u53D1\u9001\u5931\u8D25
+duo.codes[80004]=\u83B7\u53D6\u9ED1\u540D\u5355\u5931\u8D25
+
+duo.codes[90000]=\u5B9A\u65F6\u4EFB\u52A1\u542F\u52A8\u5931\u8D25
+duo.codes[90001]=\u672A\u627E\u5230\u8BE5\u5B9A\u65F6\u4EFB\u52A1
+
+duo.codes[90101]=\u7248\u672C\u4FE1\u606F\u672A\u627E\u5230
+
+duo.codes[90201] = \u672A\u627E\u5230\u8BE5\u6761\u827A\u672F\u5708
+duo.codes[90202] = \u8BF7\u786E\u5B9A\u662F\u5426\u70B9\u8D5E
+duo.codes[90203] = \u8BC4\u8BBA\u7C7B\u578B\u9519\u8BEF
+duo.codes[90204] = \u672A\u627E\u5230\u76F8\u5173\u8BC4\u8BBA
+duo.codes[90205] = \u4E0D\u53EF\u4EE5\u5C4F\u853D\u81EA\u5DF1\u54E6
+duo.codes[90206] = \u597D\u6B79\u8BF4\u70B9\u4EC0\u4E48\u5427~~~~(>_<)~~~~
+duo.codes[90207] = \u52A8\u6001\u4E0D\u5B58\u5728\u6216\u5DF2\u88AB\u5220\u9664
