--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,18 @@ server:
   servlet:
     context-path: /v1
 
-mybatis:
-  mapper-locations: classpath:mapping/*Mapper.xml
-  type-aliases-package: com.hacker.entity
-
-# 逻辑删除（软删除）
 mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    # 是否开启自动驼峰命名规则（camel case）映射
+    map-underscore-to-camel-case: true
+    # 这个配置会将执行的sql打印出来
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  # 全局策略配置
   global-config:
     db-config:
-      # 逻辑已删除值
-      logic-delete-value: 1
-      # 逻辑未删除值(默认为 0)
+      id-type: auto
+      #逻辑已删除值,(逻辑删除下有效) 需要注入逻辑策略LogicSqlInjector 以@Bean方式注入
       logic-not-delete-value: 0
+      # 逻辑未删除值,(逻辑删除下有效)
+      logic-delete-value: 1
